# src/schemas/User.cs
@@ -2,7 +2,6 @@
 
 using System.ComponentModel.DataAnnotations;
 using CleanControlDb;
-using Swashbuckle.AspNetCore.Annotations;
 
 #endregion
 
@@ -15,21 +14,13 @@ namespace CleanControlBackend.Schemas;
 /// <param name="name">The name of the User.</param>
 /// <param name="username">The username of the User.</param>
 /// <param name="role">The role of the User in the system.</param>
-/// <param name="password">Password of the User</param>
 /// <param name="isAdUser"><see langword="true" />, if User is an AD user</param>
-public record User(Guid? id
-				 , [Required] string name
-				 , [Required] string? username
-				 , [Required] Role? role
-				 , [SwaggerSchema(WriteOnly = true)] string? password
-				 , [Required] bool? isAdUser
-) {
-	public User(Guid id, string name, string username) : this(id, name, username, null, null, null) { }
-};
-
-/// <summary>
-///     Represents a User's login credentials.
-/// </summary>
-/// <param name="username">The username of the User, used for login.</param>
-/// <param name="password">The password of the User, used for login.</param>
-public record UserLogin(string username, string password);
+public record User(string? id, [Required] string name, [Required] string username, [Required] Role? role, [Required] bool? isAdUser) {
+	public User(string id, string name, string username) : this(
+																id
+															  , name
+															  , null
+															  , null
+															  , null
+															   ) { }
+}
